# Game-plus-plus

./: .clang-format  Game-plus-plus.pro  Makefile.am  Makefile.in  README.md  configure  configure.ac  format.sh  main.cpp  mainwindow.cpp  mainwindow.h
include/GPP/: GPP.hpp
src/: GPP.cpp  GPP_impl.cpp  GPP_impl.hpp  Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  test.cpp  test.hpp
